--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,6 +5,7 @@ phases:
     commands:
       - mkdir src
       - cd src
+      - aws s3 cp s3://sc-cloud-formation-v1/model.ckpt ./model.ckpt
       - git clone https://github.com/XavierXiao/Dreambooth-Stable-Diffusion
       - cd ..
       - REPOSITORY_URI=$AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME
