--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,10 +4,10 @@ phases:
   pre_build:
     commands:
       - mkdir src
-      - cd src
+      # - cd src
       # - aws s3 cp s3://sc-cloud-formation-v1/model.ckpt ./model.ckpt
-      - git clone https://github.com/XavierXiao/Dreambooth-Stable-Diffusion
-      - cd ..
+      # - git clone https://github.com/XavierXiao/Dreambooth-Stable-Diffusion
+      # - cd ..
       - REPOSITORY_URI=$AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME
       - aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com
       - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
