--- a/buildspec.yml
+++ b/buildspec.yml
@@ -13,6 +13,15 @@ phases:
       - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
   build:
     commands:
+      # THIS IS BUILDING ON THE BUILD DOCKER TASK
+      - git clone https://github.com/XavierXiao/Dreambooth-Stable-Diffusion
+      - mv Dreambooth-Stable-Diffusion src
+      - cd src
+      - conda env create -f ./environment.yaml -v
+      - conda init bash
+      - conda install pip -y
+
+      # THIS IS FROM BEFORE
       - docker build -t $REPOSITORY_URI:$IMAGE_TAG .
       - docker tag $REPOSITORY_URI:$IMAGE_TAG $REPOSITORY_URI:$IMAGE_TAG
   post_build:
