--- a/buildspec.yml
+++ b/buildspec.yml
@@ -13,7 +13,7 @@ phases:
       - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
 
 # Conda stuff
-      - build-essential gcc wget git libcudnn8 curl
+      - apt install --no-install-recommends -y build-essential gcc wget git libcudnn8 curl
       - wget --quiet https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh -O ~/miniconda.sh && \
       - /bin/bash ~/miniconda.sh -b -p /opt/conda \ && \
       - export PATH=/opt/conda/bin:$PATH
