--- a/buildspec.yml
+++ b/buildspec.yml
@@ -27,7 +27,9 @@ phases:
       - conda env create -f ./environment.yaml -v
       - conda init bash
       - conda install pip -y
+      - aws s3 cp s3://sc-cloud-formation-v1/model.ckpt ./model.ckpt
 
+      - cd ..
       # THIS IS FROM BEFORE
       - docker build -t $REPOSITORY_URI:$IMAGE_TAG .
       - docker tag $REPOSITORY_URI:$IMAGE_TAG $REPOSITORY_URI:$IMAGE_TAG
