--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,6 +3,7 @@ version: 0.2
 phases:
   pre_build:
     commands:
+      - pwd
       # - mkdir src
       # - cd src
       # - aws s3 cp s3://sc-cloud-formation-v1/model.ckpt ./model.ckpt
