Moving the AMI stuff into Docker / EFS

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,6 +4,8 @@ phases:
   pre_build:
     commands:
       - cd /codebuild/output/mnt
+      - ls -la
+      - rm -rf /codebuild/output/mnt/*
       - pwd
       # - mkdir src
       # - cd src
