--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,6 +7,10 @@ phases:
       - ls -la
       - rm -rf /codebuild/output/mnt/*
       - pwd
+      - mkdir /codebuild/output/mnt/conda_cache
+      - mkdir /codebuild/output/mnt/root_cache
+      - mkdir /codebuild/output/mnt/ubuntu_cache
+      - pwd
       # - mkdir src
       # - cd src
       # - aws s3 cp s3://sc-cloud-formation-v1/model.ckpt ./model.ckpt
