--- a/buildspec.yml
+++ b/buildspec.yml
@@ -36,6 +36,8 @@ phases:
       - conda env create -f ./environment.yaml -v
       - conda init bash
       - conda install pip -y
+
+      - cp /opt/conda/envs/ldm/* -rf /ldm_cache/
       - aws s3 cp s3://sc-cloud-formation-v1/model.ckpt ./model.ckpt
 
       - cd ..
