--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,6 +10,7 @@ phases:
       - mkdir /codebuild/output/mnt/conda_cache
       - mkdir /codebuild/output/mnt/root_cache
       - mkdir /codebuild/output/mnt/ubuntu_cache
+      - mkdir /codebuild/output/mnt/ldm_cache
       - pwd
       # - mkdir src
       # - cd src
@@ -37,7 +38,7 @@ phases:
       - conda init bash
       - conda install pip -y
 
-      - cp /opt/conda/envs/ldm/* -rf /ldm_cache/
+      - cp /opt/conda/envs/ldm/* -rf /codebuild/output/mnt/ldm_cache/
       - aws s3 cp s3://sc-cloud-formation-v1/model.ckpt ./model.ckpt
 
       - cd ..
